# yasb

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  angular.json  index.html  index.md  package-lock.json  package.json  pylama.ini  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: msi.yaml
src/: .eslintrc.cjs  Bar.vue  YasbBar.vue  __main__.py  config.json  config.yaml  default.scss  index.html  index.ts  log.ts  main.py  main.ts  polyfills.ts  setup.html  style.css  styles.css  tsconfig.app.json  vite-env.d.ts
src-tauri/: .tauriignore  Cargo.toml  build.rs  config.yaml  rustfmt.toml  styles.scss  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_bar.rs  bars.rs  config.rs  main.rs  setup.rs  tray.rs  windows.rs
src-tauri/src/core/: autostart.rs  bar.rs  cli.rs  commands.rs  config.rs  configuration.rs  constants.rs  events.rs  logger.rs  mod.rs  setup.rs  tray.rs  watcher.rs
src-tauri/src/widgets/: active_window.rs  base.rs  cat.rs  custom.rs  datetime.rs  events.rs  mod.rs  sys_info.rs  text.rs  unknown.rs
src-tauri/src/widgets/komorebi/: komorebic.rs  listener.rs  mod.rs  types.rs  winevent.rs  workspaces.rs
src-tauri/src/win32/: app_bar.rs  fullscreen.rs  mod.rs  tray.rs  utils.rs  win_event_hook.rs  wineventhook.rs  winproc.rs
src/app/: app.component.ts  app.module.ts
src/app/components/: styles-watcher.component.ts
src/app/components/bar/: bar.component.html  bar.component.scss  bar.component.ts
src/app/components/widgets/: callback-widget.component.ts  index.ts
src/app/pipes/: safe-html.pipe.ts
src/app/services/: komorebi.service.ts  popup.service.ts
src/bindings/config/: BarConfig.ts  BarEdge.ts  BarEvent.ts  BlurEffect.ts  ColumnBarWidgets.ts  YasbConfig.ts
src/bindings/widget/: ConfiguredWidget.ts  ConfiguredWidgets.ts
src/bindings/widget/active_window/: ActiveWindowCallbackType.ts  ActiveWindowPayload.ts  ActiveWindowWidgetProps.ts  IgnoreLists.ts  WindowProcessInfo.ts
src/bindings/widget/base/: ActiveWindowCallbackType.ts  (+15 more)
src/components/: WidgetWrapper.vue  YasbBar.vue  bar.vue  index.ts
src/components/widgets/: ActiveWindowWidget.vue  CustomWidget.vue  DateTimeWidget.vue  SysInfoWidget.vue  TextWidget.vue  UnknownWidget.vue  cat.widget.vue  custom.widget.vue  datetime.widget.vue  index.ts  text.widget.vue  unknown.widget.vue
src/core/: alert_dialog.py  bar.py  bar_manager.py  config.py  config_parser.py  event_enums.py  event_service.py  log.py  settings.py  tray.py  watcher.py
src/core/utils/: alert_dialog.py  config_loader.py  config_parser.py  config_utils.py  utilities.py  widget_builder.py
src/core/validation/: bar.py  config.py
src/core/widgets/: active_window.py  base.py  battery.py  clock.py  custom.py  example.py  memory.py
src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
src/utils/: eval.ts  format.ts  log.ts
src/widgets/: Text.vue  custom.widget.vue  datetime.widget.vue  index.ts  text.widget.vue  unknown.widget.vue
src/yasb/: __main__.py  main.py
src/yasb/core/: bar.py  bar_manager.py  config.py  event_service.py  log.py  tray.py  watcher.py
yasb/: settings.py
yasb/core/: log.py
(+116 files in other folders)
