[package]
name = "yasb"
version = "0.1.0"
description = "Yet Another Status Bar - A customisable Windows status bar alternative"
authors = ["denBot"]
license = ""
repository = ""
default-run = "yasb"
edition = "2021"
rust-version = "1.57"

[profile.release.package.wry]
debug = true
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0"
home = "0.5.3"
serde_json = "1.0"
serde_yaml = "0.9.2"
serde_repr = "0.1"
Inflector = "0.11.4"
hotwatch = "0.4.6"
rsass = "0.26.0"
notify = "4.0.17"
strum_macros = "0.24.2"
log = "0.4.17"
simplelog = "0.12.0"
uuid = "1.1.2"
wait-timeout = "0.2.0"
window-vibrancy = "0.3.1"
ts-rs = "6.1"
wineventhook = "0.5.0"
sysinfo = "0.26.0"
throttle_my_fn = "0.2"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "cli", "system-tray"] }
ctrlc = { version = "3.2.2", features = ["termination"] }
tokio = { version = "1.20.1", features = ["full" ] }

[dev-dependencies]
ts-rs = { version = "6.1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi"
]
